<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>be.kuleuven.cs</groupId>
    <artifactId>gridflex-main</artifactId>
    <version>0.2.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>GridFlex Simulator</name>
    <description>A project for flex-representation and utilization experiments.</description>

    <modules>
        <module>project</module>
        <module>core</module>
        <module>games</module>
        <module>solving</module>
        <module>example</module>
        <module>domain</module>
        <module>persistence</module>
    </modules>

    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.google.code.findbugs</groupId>
            <artifactId>jsr305</artifactId>
            <version>3.0.1</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>1.7.21</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-log4j12</artifactId>
            <version>1.7.21</version>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-all</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-collections4</artifactId>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-math3</artifactId>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
        </dependency>
        <dependency>
            <groupId>org.eclipse.jdt</groupId>
            <artifactId>org.eclipse.jdt.annotation</artifactId>
        </dependency>
        <dependency>
            <groupId>net.sf.jmpi</groupId>
            <artifactId>jmpi-solver-cplex</artifactId>
            <version>0.6</version>
        </dependency>
        <dependency>
            <groupId>net.sf.jmpi</groupId>
            <artifactId>jmpi-solver-gurobi</artifactId>
            <version>0.6</version>
        </dependency>
    </dependencies>
    <dependencyManagement>
        <dependencies>
            <!-- <dependency> <groupId>be.kuleuven.cs.gridlock</groupId> <artifactId>gridlock-events</artifactId>
                <version>0.0.1</version> </dependency> -->
            <!-- <dependency> <groupId>org.jfree</groupId> <artifactId>jfreechart</artifactId>
                <version>1.0.17</version> </dependency> -->
            <!-- <dependency> <groupId>net.sf.jung</groupId> <artifactId>jung2</artifactId>
                <version>2.0.1</version> <type>pom</type> </dependency> <dependency> <groupId>net.sf.jung</groupId>
                <artifactId>jung-graph-impl</artifactId> <version>2.0.1</version> </dependency> -->
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-collections4</artifactId>
                <version>4.1</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-math3</artifactId>
                <version>3.6.1</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>3.5</version>
            </dependency>
            <dependency>
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
                <version>19.0</version>
            </dependency>
            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>4.12</version>
            </dependency>
            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-all</artifactId>
                <version>1.10.19</version>
            </dependency>
            <dependency>
                <groupId>net.sf.jung</groupId>
                <artifactId>jung2</artifactId>
                <version>2.0.1</version>
                <type>pom</type>
            </dependency>
            <dependency>
                <groupId>net.sf.jung</groupId>
                <artifactId>jung-graph-impl</artifactId>
                <version>2.1.1</version>
            </dependency>
            <dependency>
                <groupId>com.googlecode.combinatoricslib</groupId>
                <artifactId>combinatoricslib</artifactId>
                <version>2.1</version>
            </dependency>
            <dependency>
                <groupId>com.google.auto.value</groupId>
                <artifactId>auto-value</artifactId>
                <version>1.3</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-csv</artifactId>
                <version>1.4</version>
            </dependency>
            <dependency>
                <groupId>it.unimi.dsi</groupId>
                <artifactId>fastutil</artifactId>
                <version>7.0.13</version>
            </dependency>
            <dependency>
                <groupId>org.eclipse.jdt</groupId>
                <artifactId>org.eclipse.jdt.annotation</artifactId>
                <version>2.0.0</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.6.0</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.19.1</version>
                <configuration>
                    <reuseForks>false</reuseForks>
                    <forkCount>1</forkCount>
                    <parallel>classes</parallel>
                    <threadCount>4</threadCount>
                    <argLine>${argLine} -Xms256m -Xmx4096M -XX:MaxPermSize=512M</argLine>
                    <excludedGroups>${test.excludedGroups}</excludedGroups>
                    <outputDirectory>${basedir}/target/site</outputDirectory>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.7.1.201405082137</version>
                <executions>
                    <execution>
                        <id>default-prepare-agent</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>default-report</id>
                        <phase>prepare-package</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>jacoco-initialize</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>jacoco-site</id>
                        <phase>package</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>default-check</id>
                        <goals>
                            <goal>check</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <!-- implmentation is needed only for Maven 2 -->
                                <rule implementation="org.jacoco.maven.RuleConfiguration">
                                    <element>BUNDLE</element>
                                    <limits>
                                        <!-- implmentation is needed only for Maven 2 -->
                                        <limit implementation="org.jacoco.report.check.Limit">
                                            <counter>COMPLEXITY</counter>
                                            <value>COVEREDRATIO</value>
                                            <minimum>0.00</minimum>
                                        </limit>
                                    </limits>
                                </rule>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
                <configuration>
                    <excludes>
                        <exclude>**/optaplanner/*</exclude>
                        <exclude>**/kie/*</exclude>
                        <exclude>**/mvel/*</exclude>
                        <exclude>**/drools/*</exclude>
                        <exclude>**/jmpi/*</exclude>
                    </excludes>
                </configuration>
            </plugin>
            <!-- <plugin> <groupId>com.github.github</groupId> <artifactId>downloads-maven-plugin</artifactId>
            <version>0.6</version> <configuration> <description>Official ${project.name}
            build of the ${project.version} release</description> <override>true</override>
            <includeAttached>true</includeAttached> <server>github</server> </configuration>
            <executions> <execution> <goals> <goal>upload</goal> </goals> <phase>install</phase>
            </execution> </executions> </plugin> <plugin> <groupId>com.github.github</groupId>
            <artifactId>site-maven-plugin</artifactId> <version>0.7</version> <configuration>
            <message>Building site for ${project.version}</message> <server>github</server>
            </configuration> <executions> <execution> <goals> <goal>site</goal> </goals>
            <phase>site</phase> </execution> </executions> </plugin> -->
            <plugin>
                <groupId>com.igormaznitsa</groupId>
                <artifactId>jute</artifactId>
                <version>1.1.1</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>jute</goal>
                        </goals>
                        <configuration>
                            <onlyAnnotated>true</onlyAnnotated>
                            <includes>
                                <include>/**/MapDBMemoizationContextTest_Issues.java</include>
                            </includes>
                            <!--<includeTests>-->
                            <!--<includeTest>*parallell_*_JuteTest</includeTest>-->
                            <!--</includeTests>-->
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
        <pluginManagement>
            <plugins>
                <!--This plugin's configuration is used to store Eclipse m2e settings
                    only. It has no influence on the Maven build itself. -->
                <plugin>
                    <groupId>org.eclipse.m2e</groupId>
                    <artifactId>lifecycle-mapping</artifactId>
                    <version>1.0.0</version>
                    <configuration>
                        <lifecycleMappingMetadata>
                            <pluginExecutions>
                                <pluginExecution>
                                    <pluginExecutionFilter>
                                        <groupId>org.jacoco</groupId>
                                        <artifactId>
                                            jacoco-maven-plugin
                                        </artifactId>
                                        <versionRange>
                                            [0.7.1.201405082137,)
                                        </versionRange>
                                        <goals>
                                            <goal>prepare-agent</goal>
                                        </goals>
                                    </pluginExecutionFilter>
                                    <action>
                                        <ignore />
                                    </action>
                                </pluginExecution>
                            </pluginExecutions>
                        </lifecycleMappingMetadata>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
    <reporting>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-report-plugin</artifactId>
                <version>2.19.1</version>
                <configuration>
                    <showSuccess>true</showSuccess>
                    <outputDirectory>${basedir}/target/site</outputDirectory>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>cobertura-maven-plugin</artifactId>
                <version>2.7</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>2.10.4</version>
                <configuration>
                </configuration>
            </plugin>
        </plugins>
    </reporting>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <sonar.language>java</sonar.language>
        <test.excludedGroups />
        <skip.test.categories />
    </properties>
    <organization>
        <name>imec-distrinet Kuleuven</name>
    </organization>
    <scm>
        <url>https://github.com/KrisC369/GridFlex-Simulator.git</url>
        <developerConnection>scm:git:git@github.com:KrisC369/GridFlex-Simulator.git</developerConnection>
        <connection>scm:git:git://github.com:KrisC369/GridFlex-Simulator.git</connection>
    </scm>
    <issueManagement>
        <url>https://github.com/KrisC369/GridFlex-Simulator/issues</url>
        <system>GitHub Issues</system>
    </issueManagement>
    <ciManagement>
        <system>jenkins</system>
        <url>http://kraken.cs.kuleuven.be:18080/job/GridFlex-Simulator</url>
        <notifiers>
            <notifier>
                <type>mail</type>
                <address>kristof.coninx@cs.kuleuven.be</address>
            </notifier>
        </notifiers>
    </ciManagement>
    <repositories>
        <repository>
            <id>java.net2</id>
            <name>Java.net</name>
            <url>https://oss.sonatype.org/content/repositories/java.net2</url>
        </repository>
        <repository>
            <id>Sonatype-public</id>
            <name>SnakeYAML repository</name>
            <url>http://oss.sonatype.org/content/groups/public/</url>
        </repository>
        <repository>
            <id>eclipse-staging</id>
            <name>Eclipse.org Staging</name>
            <url>https://repo.eclipse.org/content/repositories/eclipse-staging/</url>
        </repository>
        <repository>
            <id>aw-repo</id>
            <name>AgentWise Custom repo</name>
            <url>https://github.com/agentwise/mvn-repo/raw/master</url>
        </repository>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
    </repositories>
</project>
